Added database to project

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@ DATABASE_ASYNC_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/car_db
 CORS_HEADERS=["*"]
 CORS_ORIGINS=["http://localhost:3000"]
 
+ENVIRONMENT=LOCAL
+
 OPEN_API_KEY=your_open_api_key
