--- a/compose.yml
+++ b/compose.yml
@@ -10,4 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - car_db_data:/var/lib/postgresql/data
-      -
+
+volumes:
+  car_db_data:
+    driver: local
