Added car creation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
+faker = "^37.1.0"
 
 [tool.poetry.group.prod.dependencies]
 gunicorn = "^22.0.0"
