--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ asyncpg = "^0.29.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sentry-sdk = "^2.5.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
+python-dotenv = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
