--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sentry-sdk = "^2.5.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 python-dotenv = "^1.1.0"
+openai = "^1.76.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
