--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,8 @@ sentry-sdk = "^2.5.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 python-dotenv = "^1.1.0"
 openai = "^1.76.0"
+langchain = "^0.3.24"
+langchain-openai = "^0.3.14"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
