--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,23 @@ services:
     volumes:
       - car_db_data:/var/lib/postgresql/data
 
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: car_api
+    depends_on:
+      - car_db
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@car_db:5432/car_db
+      - DATABASE_ASYNC_URL=postgresql+asyncpg://postgres:postgres@car_db:5432/car_db
+    command: ["poetry", "run", "uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
+    restart: unless-stopped
+
 volumes:
   car_db_data:
     driver: local
